# cpast_llm

./: .gitignore  .sample.env  Cargo.toml  Makefile  README.md  app.py  main.py  pyproject.toml  scrape.py
cpast_llm/: chat.py  prompt.py
cpast_scrapper/: codechef.py  codeforces.py  constant.py
cpast_utils/: models.py
python/cpast_llm/: app.py  scrape.py
python/cpast_llm/cpast_db/: clex_cache.py
python/cpast_llm/cpast_prompt/: chat.py  prompt.py
python/cpast_llm/cpast_scrapper/: codechef.py  codeforces.py
python/cpast_llm/cpast_utils/: env_util.py  models.py  scrape_models.py
src/: lib.rs
