[project]
name = "cpast_llm"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.poetry]
name = "cpast-llm"
version = "0.1.0"
description = "LLM for cpast lib written in Rust to generate clex language from human readable input format and constarints"
authors = ["Lab Rat <dev.frolics@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-google-genai = "^0.0.6"
python-dotenv = "^1.0.1"
langchain = "^0.1.4"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
requests = "^2.31.0"
requests-cache = "^1.1.1"
pylatexenc = "^2.10"
bs4 = "^0.0.2"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
maturin = "^1.4.0"
pytest = "^8.0.0"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
