[project]
name = "cpast-llm"
version = "0.1.1"
description = "LLM for cpast lib written in Rust to generate clex language from human readable input format and constraints"
authors = [
    { name = "Lab Rat", email = "dev.frolics@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain>=0.1.12",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "requests>=2.31.0",
    "pylatexenc>=2.10",
    "bs4>=0.0.2",
    "html5lib>=1.1",
    "requests-cache>=1.2.0",
    "langchain-google-genai>=0.0.11",
]
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.rye.scripts]
dev = { cmd = "uvicorn cpast_llm.app:app --port 8000 --reload", env = { PYTHONPATH = "./python/cpast_llm"}}
requirements = "uv pip compile pyproject.toml -o requirements.txt"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "ruff>=0.3.3",
    "pyright>=1.1.358",
    "maturin>=1.5.0",
    "pip>=24.0",
]

[tool.maturin]
python-source = "python"
module-name = "cpast_llm.cpast_lib"
features = ["pyo3/extension-module"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes for non-triple-quoted strings.
quote-style = "single"

[tool.pyright]
executionEnvironments = [
  { root = "python/cpast_llm"},
]
include = ["python/cpast_llm/cpast_scrapper", "python/cpast_llm/cpast_utils", "python/cpast_llm/cpast_prompt", "python/cpast_llm/main.py", "python/cpast_llm/app.py", "python/cpast_llm/scrape.py"]
exclude = ["python/cpast_llm/**/__pycache__",
  # "python/cpast_llm/**/__init__.py",
  "python/cpast_llm/__pycache__"
]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"
